--- a/exercises/exercise01/index.html
+++ b/exercises/exercise01/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <h1>Creative Coding 1: Exercise 01</h1>
-  <h2>Student Name</h2>
+  <h2>Oscar King</h2>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
   <a href= "../index.html">Exercises</a>
